--- a/collectorforkubernetes/1.5/collectorforkubernetes.yaml
+++ b/collectorforkubernetes/1.5/collectorforkubernetes.yaml
@@ -72,6 +72,9 @@ data:
     # httpServerBinding = 0.0.0.0:11888
     httpServerBinding =
 
+    # log requests to the http server
+    httpServerLog = false
+
     # telemetry report endpoint, set it to empty string to disable telemetry
     telemetryEndpoint = https://license.outcold.solutions/telemetry/
 
@@ -238,6 +241,12 @@ data:
     # Alternative of telling Collectord about the ClusterRole is to manually list the objects.
     # You can define which objects Collectord should traverse when it sees Owners.
     ; traverseOwnership.namespaces = v1/namespace
+
+    # Implementation of the watch protocol.
+    # 0 - use the default implementation (2)
+    # 1 - use the watch implementation that is optimized for the small number of objects (just issue one watch for all objects)
+    # 2 - use the watch implementation that is optimized for the large number of objects (paginate through the list of objects and issue watch for the last resource version)
+    watchImplementation = 2
 
     # watch for pods annotations, setup prometheus collection
     # for these pods
@@ -694,7 +703,7 @@ data:
     # Maximum time to wait for the messages in pipeline
     eventPatternMaxWait = 1s
     # Maximum message size
-    eventPatternMaxSize = 100kb
+    eventPatternMaxSize = 1MB
 
     # set output (splunk or devnull, default is [general]defaultOutput)
     output =
@@ -917,6 +926,9 @@ data:
     # whitelist.0 = ^regexp$
     # blacklist.0 = ^regexp$
 
+    # Move Journald logs reader to a separate process, to prevent process from crashing in case of corrupted log files
+    spawnExternalProcess = false
+
 
     # Pipe to join events (container logs only)
     [pipe.join]
@@ -931,7 +943,7 @@ data:
     maxWait = 1s
 
     # Maximum message size
-    maxSize = 100K
+    maxSize = 1MB
 
     # Default pattern to indicate new message (should start not from space)
     patternRegex = ^[^\s]
@@ -1366,6 +1378,29 @@ data:
     # exclude managed fields from the metadata
     excludeManagedFields = true
 
+    [input.kubernetes_watch::nodes]
+    # disable events
+    disabled = false
+
+    # Set the timeout for how often watch request should refresh the whole list
+    refresh = 10m
+
+    apiVersion = v1
+    kind = Node
+    namespace =
+
+    # override type
+    type = kubernetes_objects
+
+    # specify Splunk index
+    index =
+
+    # set output (splunk or devnull, default is [general]defaultOutput)
+    output =
+
+    # exclude managed fields from the metadata
+    excludeManagedFields = true
+
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -1406,7 +1441,7 @@ spec:
       containers:
       - name: collectorforkubernetes
         # Collector version
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.22.420
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1505,7 +1540,7 @@ spec:
         effect: "NoExecute"
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.22.420
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1580,7 +1615,7 @@ spec:
       serviceAccountName: collectorforkubernetes
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.22.420
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
