--- a/collectorforkubernetes/1.24/collectorforkubernetes.yaml
+++ b/collectorforkubernetes/1.24/collectorforkubernetes.yaml
@@ -199,9 +199,13 @@ data:
     licenseEndpoint = https://license.outcold.solutions/license/
 
     # license server through proxy
+    # This configuration is used only for the Outcold Solutions License Server
+    # For license server running on-premises, use configuration under [license.client]
     licenseServerProxyUrl =
 
     # authentication with basic authorization (user:password)
+    # This configuration is used only for the Outcold Solutions License Server
+    # For license server running on-premises, use configuration under [license.client]
     licenseServerProxyBasicAuth =
 
     # license key
@@ -249,6 +253,10 @@ data:
 
     # Configure events that are too new to be forwarded, for example 1h - that will drop all events that are 1h in future
     tooNewEvents =
+
+    # For input.files::X and application logs, when glob or match are configured, Collectord can automatically
+    # detect gzipped files and skip them (based on the extensions or magic numbers)
+    autoSkipGzipFiles = true
 
     [license.client]
     # point to the license located on the HTTP web server, or a hosted by the Collectord running as license server
@@ -425,6 +433,8 @@ data:
 
     # Allow invalid SSL server certificate
     insecure = false
+    # minTLSVersion = TLSv1.2
+    # maxTLSVersion = TLSv1.3
 
     # Path to CA cerificate
     caPath =
@@ -593,6 +603,9 @@ data:
     output.host =
     output.cgroup =
 
+    # Hide arguments for the processes, replacing with HIDDEN_ARGS(NUMBER)
+    hideArgs = false
+
 
     # network stats
     [input.net_stats]
@@ -752,9 +765,6 @@ data:
 
     # Configure events that are too new to be forwarded, for example 1h - that will drop all events that are 1h in future
     tooNewEvents =
-
-    # by default every new event should start from not space symbol
-    eventPattern = ^[^\s]
 
 
     # Application Logs
@@ -1424,7 +1434,7 @@ data:
     refresh = 10m
 
     apiVersion = v1
-    kind = pod
+    kind = Pod
     namespace =
 
     # override type
@@ -1536,7 +1546,7 @@ spec:
       containers:
       - name: collectorforkubernetes
         # Collector version
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1638,7 +1648,7 @@ spec:
         effect: "NoExecute"
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1716,7 +1726,7 @@ spec:
       serviceAccountName: collectorforkubernetes
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
