--- a/collectorforkubernetes/1.8/collectorforkubernetes.yaml
+++ b/collectorforkubernetes/1.8/collectorforkubernetes.yaml
@@ -151,9 +151,13 @@ data:
     licenseEndpoint = https://license.outcold.solutions/license/
 
     # license server through proxy
+    # This configuration is used only for the Outcold Solutions License Server
+    # For license server running on-premises, use configuration under [license.client]
     licenseServerProxyUrl =
 
     # authentication with basic authorization (user:password)
+    # This configuration is used only for the Outcold Solutions License Server
+    # For license server running on-premises, use configuration under [license.client]
     licenseServerProxyBasicAuth =
 
     # license key
@@ -201,6 +205,10 @@ data:
 
     # Configure events that are too new to be forwarded, for example 1h - that will drop all events that are 1h in future
     tooNewEvents =
+
+    # For input.files::X and application logs, when glob or match are configured, Collectord can automatically
+    # detect gzipped files and skip them (based on the extensions or magic numbers)
+    autoSkipGzipFiles = true
 
     [license.client]
     # point to the license located on the HTTP web server, or a hosted by the Collectord running as license server
@@ -377,6 +385,8 @@ data:
 
     # Allow invalid SSL server certificate
     insecure = false
+    # minTLSVersion = TLSv1.2
+    # maxTLSVersion = TLSv1.3
 
     # Path to CA cerificate
     caPath =
@@ -570,6 +580,9 @@ data:
     output.host =
     output.cgroup =
 
+    # Hide arguments for the processes, replacing with HIDDEN_ARGS(NUMBER)
+    hideArgs = false
+
 
     # network stats
     [input.net_stats]
@@ -729,9 +742,6 @@ data:
 
     # Configure events that are too new to be forwarded, for example 1h - that will drop all events that are 1h in future
     tooNewEvents =
-
-    # by default every new event should start from not space symbol
-    eventPattern = ^[^\s]
 
 
     # Application Logs
@@ -1400,7 +1410,7 @@ data:
     refresh = 10m
 
     apiVersion = v1
-    kind = pod
+    kind = Pod
     namespace =
 
     # override type
@@ -1513,7 +1523,7 @@ spec:
       containers:
       - name: collectorforkubernetes
         # Collector version
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1615,7 +1625,7 @@ spec:
         effect: "NoExecute"
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
@@ -1693,7 +1703,7 @@ spec:
       serviceAccountName: collectorforkubernetes
       containers:
       - name: collectorforkubernetes
-        image: docker.io/outcoldsolutions/collectorforkubernetes:5.23.430
+        image: docker.io/outcoldsolutions/collectorforkubernetes:5.24.442
         imagePullPolicy: Always
         securityContext:
           runAsUser: 0
